--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -56,7 +56,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04, macos-12, macos-14, windows-2019]
+        os: [ubuntu-22.04, windows-2019]
     steps:
       - uses: actions/checkout@v4
 
@@ -68,11 +68,6 @@ jobs:
         uses: docker/setup-qemu-action@v3
         with:
           platforms: all
-
-      # macOS make is too old
-      - if: runner.os == 'macOS'
-        run: |
-          brew install make automake libtool
 
       - name: Build and test wheels
         uses: pypa/cibuildwheel@v2.17.0
@@ -95,13 +90,7 @@ jobs:
         name: artifact
         path: dist
 
-    - uses: pypa/gh-action-pypi-publish@v1.8.14
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        password: ${{ secrets.PYPI_TOKEN }}
-
     - name: Upload release files
-      if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v2
       with:
         files: |
